Moved a lot of legacy pages out of the root folder. The relocation will break the pages, but I might fix them as/when they become useful for comparing legacy pages to the new pages. Longer term I expect they can be deleted.  Small updates to the schedule page now that meets are being scheduled.  This page still needs many updates to pull the data from sql - but not today.

--- a/ukpbl.css
+++ b/ukpbl.css
@@ -770,6 +770,7 @@ h2.ukcomps {
 	color: #333333;
 	padding: 4px 8px;
 	border: none;
+	border-radius: 15px;
 	cursor: pointer;
 	margin: 0;
 }
